ingress-cert-reflector.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-cert-reflector
  namespace: "${NAMESPACE}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-cert-reflector
  template:
    metadata:
      labels:
        app: ingress-cert-reflector
    spec:
      serviceAccountName: ingress-cert-reflector
      containers:
      - name: ns-watch
        image: boxboat/kubectl:${KUBECTL_VERSION}
        command:
        - sh
        - -c
        - |
          kubectl get ns --watch --field-selector="status.phase==Active" --no-headers -o "custom-columns=:metadata.name" | \
            while read ns; do
              if [ "$ns" != "${NAMESPACE}" ]; then
                echo "namespace - $ns"
                kubectl -n "${NAMESPACE}" get secret "${TLS_SECRET}" -o yaml --export | \
                  kubectl -n "$ns" apply -f -
              fi
            done
      - name: secret-watch
        image: boxboat/kubectl:${KUBECTL_VERSION}
        command:
        - sh
        - -c
        - |
          kubectl -n "${NAMESPACE}" get secret "${TLS_SECRET}" --watch --no-headers -o "custom-columns=:metadata.name" | \
            while read secret; do
              export=$(kubectl -n "${NAMESPACE}" get secret "$secret" -o yaml --export)
              for ns in $(kubectl get ns --field-selector="status.phase==Active" --no-headers -o "custom-columns=:metadata.name"); do
                if [ "$ns" != "${NAMESPACE}" ]; then
                  echo "namespace - $ns"
                  echo "$export" | kubectl -n "$ns" apply -f -
                fi
              done
            done
